# fastkit-cli

./: CHANGELOG.md  README.md  main.py  pyproject.toml
.github/workflows/: test.yaml  test_publish.yaml
fastkit_cli/: main.py
fastkit_cli/commands/: __init__.py  make.py  migrate.py  new.py  seed.py  server.py
fastkit_cli/templates/module/: async_repository.py.jinja  async_router.py.jinja  async_service.py.jinja  listeners.py.jinja  model.py.jinja  repository.py.jinja  router.py.jinja  schemas.py.jinja  signals.py.jinja
tests/: test_make.py  test_migrate.py  test_new.py  test_seed.py  test_server.py
