[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fastkit-cli"
version = "0.2.2"
description = "FastKit CLI is a code generation tool for the fastkit core package."
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "FastKit Org", email = "hello@fastkit.org"}
]
keywords = [
    "fastapi",
    "framework",
    "toolkit",
    "laravel",
    "web",
    "api",
    "crud",
    "database",
    "orm"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Framework :: FastAPI",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "fastkit-core>=0.4.0,<0.5.0",
    "jinja2>=3.1.6",
    "typer>=0.24.1",
    "uvicorn>=0.34.0",
    "alembic",
    "inflect>=7.0",
]

[project.scripts]
fastkit = "fastkit_cli.main:app"

[project.urls]
Homepage = "https://fastkit.org/docs/fastkit-cli/"
Documentation = "https://fastkit.org/docs/fastkit-cli/"
Repository = "https://github.com/fastkit-org/fastkit-cli"

[tool.hatch.build.targets.wheel]
include = [
    "fastkit_cli/**/*.py",
    "fastkit_cli/templates/**/*.jinja",
]

[tool.hatch.build.targets.sdist]
include = [
    "fastkit_cli/**/*.py",
    "fastkit_cli/templates/**/*.jinja",
    "README.md",
    "LICENSE",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
verbosity = 1
